# ncc

./: .gitignore  README.md  meson.build
codegen/: meson.build
codegen/src/: ast.cc  codegen.cc  codegen.hh
codegen/test/: input.txt  main.cc
driver/src/: driver.cc  driver.hh
irgen/: meson.build
irgen/src/: irgen.cc  irgen.hh
irgen/test/: main.cc
lexer/: meson.build
lexer/src/: handle.hh  lex_handle.cc  lex_handle.hh  lexer.hh  main.lxx
lexer/test/: input.txt  main.cc
parser/: meson.build
parser/src/: ast.hh  handle.cc  main.yxx
parser/test/: input.txt  main.cc
